--- a/index.html
+++ b/index.html
@@ -1,40 +1,181 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ray的小屋</title>
     <style>
         body {
+            display: flex;
+            flex-direction: column;
             margin: 0;
+            font-family: Arial, sans-serif;
+            height: 100vh;
+        }
+        header, footer {
+            background-color: #ccc;
+            padding: 10px;
+            text-align: center;
+        }
+        main {
+            display: flex;
+            flex: 1;
+            overflow: hidden;
+        }
+        nav {
+            width: 200px;
+            background-color: #f4f4f4;
+            padding: 10px;
+            border-right: 1px solid #ccc;
+            overflow-y: auto;
+        }
+        nav ul {
+            list-style: none;
+            padding: 0;
+        }
+        nav ul li {
+            padding: 10px;
+            cursor: pointer;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        nav ul li:hover {
+            background-color: #ddd;
+        }
+        #add-site {
+            text-align: center;
+            margin-top: 20px;
+            cursor: pointer;
+        }
+        .content {
+            flex: 1;
+            padding: 20px;
+            overflow-y: auto;
+        }
+        .modal {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: white;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            z-index: 1000;
+            border-radius: 10px;
+        }
+        .modal input {
+            display: block;
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            box-sizing: border-box;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+        }
+        .modal button {
+            padding: 10px;
+            margin-right: 10px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        .modal button#confirm {
+            background-color: #f44336;
+            color: white;
+        }
+        .modal button#cancel {
+            background-color: #e0e0e0;
+        }
+        .overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: 999;
         }
     </style>
 </head>
 <body>
-    <div style="
-	background-color: #f1f1f1;
-	text-align: center;
-	padding: 40px
-    ">
-	<img src='https://baike.baidu.com/pic/%E6%B5%81%E8%90%A4/63849747/0/377adab44aed2e738bd406fbc559b68b87d6267f4ce9?fr=lemma&fromModule=lemma_content-image' alt="Ray" width="80px" height="80px">
+    <header>
+        顶栏
+    </header>
+    <main>
+        <nav>
+            <ul>
+                <li id="main-page">主页面</li>
+                <li id="add-site">+</li>
+            </ul>
+        </nav>
+        <div class="content" id="content">
+            <p>请选择一个选项</p>
+        </div>
+    </main>
+    <footer>
+        &copy; 2024 Ray Wang 王耀锋 保留所有权利
+        <p><a href="/privacy-policy">隐私政策</a> | <a href="/terms-of-service">服务条款</a></p>
+    </footer>
+    <div class="modal" id="modal">
+        <input type="text" id="site-name" placeholder="网站名称">
+        <input type="text" id="site-url" placeholder="网址">
+        <button id="confirm">确认</button>
+        <button id="cancel">取消</button>
     </div>
-    <div stytle="
-	max-wide: 700px;
-	margin: 30px auto;
-	padding: 15px
-	line-height: 1.7
-	
-    ">
-<p>我的网站</p>
-</div>
-    <div style="
-	background-color: #f1f1f1;
-	text-align: center;
-	padding: 40px
-	font-size: 12px
-    ">
-	<p>我的网站</p>
+    <div class="overlay" id="overlay"></div>
 
-</div>
+    <script>
+        document.getElementById('main-page').addEventListener('click', function() {
+            const content = document.getElementById('content');
+            const now = new Date();
+            content.innerHTML = `<p>当前时间：${now.toLocaleString()}</p>`;
+        });
+
+        document.getElementById('add-site').addEventListener('click', function() {
+            document.getElementById('modal').style.display = 'block';
+            document.getElementById('overlay').style.display = 'block';
+        });
+
+        document.getElementById('cancel').addEventListener('click', function() {
+            document.getElementById('modal').style.display = 'none';
+            document.getElementById('overlay').style.display = 'none';
+        });
+
+        document.getElementById('confirm').addEventListener('click', function() {
+            const siteName = document.getElementById('site-name').value;
+            const siteUrl = document.getElementById('site-url').value;
+            if (siteName && siteUrl) {
+                const ul = document.querySelector('nav ul');
+                const li = document.createElement('li');
+                li.textContent = siteName;
+                li.addEventListener('click', function() {
+                    const content = document.getElementById('content');
+                    content.innerHTML = `<iframe src="${siteUrl}" style="width:100%; height:100%; border:none;"></iframe>`;
+                });
+                ul.insertBefore(li, document.getElementById('add-site'));
+                document.getElementById('modal').style.display = 'none';
+                document.getElementById('overlay').style.display = 'none';
+            }
+        });
+
+        document.getElementById('site-url').addEventListener('input', async function() {
+            const url = this.value;
+            if (url) {
+                try {
+                    const response = await fetch(`https://cors-anywhere.herokuapp.com/${url}`);
+                    const text = await response.text();
+                    const parser = new DOMParser();
+                    const doc = parser.parseFromString(text, 'text/html');
+                    const title = doc.querySelector('title').innerText;
+                    document.getElementById('site-name').value = title;
+                } catch (error) {
+                    console.error('Error fetching site name:', error);
+                }
+            }
+        });
+    </script>
 </body>
 </html>
