--- a/index.html
+++ b/index.html
@@ -12,10 +12,29 @@
             font-family: Arial, sans-serif;
             height: 100vh;
         }
-        header, footer {
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
             background-color: #ccc;
-            padding: 10px;
-            text-align: center;
+            padding: 10px 20px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        header h1 {
+            margin: 0;
+            font-size: 24px;
+        }
+        header nav {
+            display: flex;
+            gap: 20px;
+        }
+        header nav a {
+            text-decoration: none;
+            color: #333;
+            font-size: 16px;
+        }
+        header nav a:hover {
+            text-decoration: underline;
         }
         main {
             display: flex;
@@ -28,6 +47,8 @@
             padding: 10px;
             border-right: 1px solid #ccc;
             overflow-y: auto;
+            resize: horizontal;
+            overflow: auto;
         }
         nav ul {
             list-style: none;
@@ -98,16 +119,42 @@
             background-color: rgba(0, 0, 0, 0.5);
             z-index: 999;
         }
+        footer {
+            background-color: #ccc;
+            padding: 5px 10px;
+            text-align: center;
+            font-size: 14px;
+        }
+        .site-item {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .site-item button {
+            background: none;
+            border: none;
+            cursor: pointer;
+            color: red;
+            font-size: 16px;
+        }
+        .site-item button.edit {
+            color: blue;
+        }
     </style>
 </head>
 <body>
     <header>
-        顶栏
+        <h1>Ray的小屋</h1>
+        <nav>
+            <a href="#home">主页</a>
+            <a href="#about">关于我</a>
+            <a href="#contact">联系</a>
+        </nav>
     </header>
     <main>
         <nav>
             <ul>
-                <li id="main-page">主页面</li>
+                <li id="main-page">主页</li>
                 <li id="add-site">+</li>
             </ul>
         </nav>
@@ -150,7 +197,26 @@
             if (siteName && siteUrl) {
                 const ul = document.querySelector('nav ul');
                 const li = document.createElement('li');
-                li.textContent = siteName;
+                li.innerHTML = `
+                    <div class="site-item">
+                        <span>${siteName}</span>
+                        <div>
+                            <button class="edit">✏️</button>
+                            <button class="delete">×</button>
+                        </div>
+                    </div>
+                `;
+                li.querySelector('.delete').addEventListener('click', function() {
+                    if (confirm('确定要删除此网站吗？')) {
+                        ul.removeChild(li);
+                    }
+                });
+                li.querySelector('.edit').addEventListener('click', function() {
+                    const newName = prompt('修改网站名称', siteName);
+                    if (newName) {
+                        li.querySelector('span').textContent = newName;
+                    }
+                });
                 li.addEventListener('click', function() {
                     const content = document.getElementById('content');
                     content.innerHTML = `<iframe src="${siteUrl}" style="width:100%; height:100%; border:none;"></iframe>`;
